--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,19 +1,59 @@
-<header class="header">
-  <div class="container">
-    <nav class="nav">
-      <a class="nav-logo" href="./index.html" aria-label="Site logo">
-        <svg class="nav-logo-icon" width="100" height="30">
-          <use href="{=$icon-path}"></use>
-        </svg>
-      </a>
-      <ul class="nav-list">
-        <li class="nav-item">
-          <a class="nav-link {=$highlight-act}" href="./page-2.html">Page 2</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link {=$highlight-curr}" href="./page-3.html">Page 3</a>
-        </li>
-      </ul>
-    </nav>
+<header>
+  <div class="top-bar container">
+    <p class="promo-text">FREE UNITED KINGDOM SHIPPING $200 +</p>
   </div>
+  <nav class="main-nav container">
+    <div class="nav-container">
+      <div class="nav-left">
+        <div class="mob-icons">
+          <button class="icon-link" data-menu-open>
+            <svg class="icon-burger" width="24" height="24">
+              <use href="./img/symbol-defs.svg#icon-burger"></use>
+            </svg>
+          </button>
+          <a href="#" class="icon-link"><svg class="icon-search-mob" width="24" height="24">
+              <use href="./img//symbol-defs.svg#icon-search"></use>
+            </svg></a>
+        </div>
+        <ul class="nav-desk-list">
+          <li class="nav-desk-item"><a href="#" class="nav-desk-link">Crew Necks</a></li>
+          <li class="nav-desk-item"><a href="#" class="nav-desk-link">V-Necks</a></li>
+          <li class="nav-desk-item"><a href="#" class="nav-desk-link">Activewear</a></li>
+          <li class="nav-desk-item has-submenu">
+            <a href="#" class="nav-desk-link">
+              <span class="nav-link-text">Bundles</span>
+              <svg class="arr-down" width="24" height="24">
+                <use href="./img/symbol-defs.svg#icon-arrow-down"></use>
+              </svg>
+            </a>
+            <ul class="submenu">
+              <li><a href="#" class="submenu-link">Bundles 1</a></li>
+              <li><a href="#" class="submenu-link">Bundles 2</a></li>
+              <li><a href="#" class="submenu-link">Bundles 3</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="logo">
+        <a href="./index.html" class="logo-link">
+          <img src="./img/logo.svg" alt="Logo" class="icon-logo">
+        </a>
+      </div>
+
+
+      <div class="nav-right">
+        <div class="profile-icons">
+          <a href="#" class="icon-link"><svg class="icon-search" width="24" height="24">
+              <use href="./img/symbol-defs.svg#icon-search"></use>
+            </svg></a>
+          <a href="#" class="icon-link"><svg class="icon-user" width="24" height="24">
+              <use href="./img/symbol-defs.svg#icon-user"></use>
+            </svg></a>
+          <a href="#" class="icon-link"><svg class="icon-cart" width="24" height="24">
+              <use href="./img/symbol-defs.svg#icon-cart"></use>
+            </svg></a>
+        </div>
+      </div>
+    </div>
+  </nav>
 </header>
