--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,44 +1,325 @@
-.header {
-  padding: 20px 0;
+header {
+  width: 100%;
 }
-.nav {
-  display: flex;
-  justify-content: space-between;
+
+.top-bar {
+  background-color: #212322; 
+  text-align: center; 
+  padding: 6px 10px;
+  height: 30px;
 }
-.nav-logo {
-  display: inline-flex;
-  align-items: center;
+
+.promo-text {
+  margin: 0;
+  font-family: sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 150%;
+  text-transform: uppercase;
+  color: #fafaf8;
+}
+
+.main-nav {
+  background-color: #fafaf8; 
+  height: 53.52px;
   justify-content: center;
 }
-.nav-list {
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 4px;
+}
+.nav-left,
+.nav-right {
   display: flex;
   align-items: center;
+  flex: 1;
+}
+
+.nav-left {
+  justify-content: flex-start; 
+}
+
+.nav-desk-list,
+.icon-search,
+.icon-user {
+  display: none;
+}
+.mob-icons {
+  display: flex;
+  gap: 16px;
+
+}
+.icon-link {
+  height: 24px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: currentColor;
+  color: currentColor;
+}
+.icon-link:hover {
+  fill: #605e5c;
+}
+.icon-burger,
+.icon-search-mob,
+.arr-down,
+.icon-search,
+.icon-user,
+.icon-cart {
+  fill: transparent;
+  stroke: #212322;
+  transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-burger:hover,
+.icon-search-mob:hover,
+.arr-down:hover,
+.icon-search:hover,
+.icon-user:hover,
+.icon-cart:hover {
+  stroke: #605e5c;
+}
+.logo {
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: auto;
+  text-align: center;
+}
+.icon-logo {
+  width: 121px;
+  height: 45px;
+  
+}
+.nav-right {
   justify-content: flex-end;
-  gap: 40px;
 }
-.nav-link {
+.profile-icons {  
+  display: flex; 
+  gap: 16px;
+}
+.icon-link {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-link:hover {
+  fill: #605e5c;
+}
+
+/* MOB_MENU */
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  display: flex;
+  /* justify-content: flex-start; */
+  visibility: hidden;
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-out, opacity 0.3s ease-out, visibility 0.3s ease-out;
+}
+
+.mobile-menu.is-open {
+  visibility: visible;
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.mobile-menu-container {
+  width: 50%;
+  height: 290px;
+  background-color: #fff;
+  padding: 19px;
+  display: flex;
+  flex-direction: column;
   position: relative;
-  display: block;
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  transition: 200ms ease-in;
+  overflow-y: auto;
+  align-items: flex-end;
+  margin-top: 30px;
 }
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
-}
-.nav-link::after {
-  content: '';
+
+.close-btn {
   position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%) translateY(100%);
-  width: 110%;
-  height: 4px;
-  border-radius: 4px;
-  transform-origin: center;
-  animation: stretch 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55) 200ms both;
+  display: none;
+  top: 16px;
+  left: 16px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  justify-content: center;
 }
-.nav-link.active::after {
-  background: #747bff;
+.close-icon {
+  stroke: #212322;
+  transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 8px;
+}
+.close-icon:hover {
+  stroke: #605e5c;
+}
+
+.mobile-menu.is-open .burger-btn {
+  display: none;
+}
+
+.mobile-menu.is-open .close-btn {
+  display: flex;
+}
+
+.mobile-menu-nav {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center
+  
+}
+
+.mobile-menu-list {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 16px;
+  
+}
+
+.mobile-menu-link {
+  text-align: center;
+  padding: 5px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  color: #212322;
+}
+
+.mobile-menu-link,
+.mobile-menu-button {
+  text-decoration: none;
+  display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-link:hover,
+.mobile-menu-link:focus {
+  color: #605e5c;
+}
+
+@media screen and (min-width: 768px) {
+  .mob-icons {
+    gap: 28px;
+  }
+  .icon-search-mob {
+    display: none;
+  }
+  .profile-icons {
+    gap: 28px;
+  }
+  .icon-search, .icon-user {
+    display: block;
+  }
+  .mobile-menu-container {
+    width: 30%;
+  }
+  .close-btn {
+    left: 36px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .top-bar {
+    height: 32px;
+  }
+  .promo-text {
+    line-height: 167%;
+  }
+  .nav-container {
+    height: 100%;
+    padding-top: 0;
+  }
+  .main-nav {
+    background-color: #e3e3e3;
+    height: 78px;
+  }  
+  .mob-icons {
+    display: none;
+  }
+  .mobile-menu {
+    display: none;
+  }
+  .nav-desk-list {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .nav-desk-item {
+    padding: 6px 12px;
+    position: relative;
+  }
+  .nav-desk-link {
+    display: flex;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    color: #212322;
+    align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav-desk-link:hover {
+    color: #605e5c;
+  }
+  .nav-link-text {
+    padding-right: 13px;
+  }  
+  
+  .submenu {
+    display: none;
+    position: absolute;
+    top: 100%; 
+    left: 0;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    padding: 10px;
+    list-style: none;
+    margin: 0;
+    min-width: 150px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    z-index: 100;
+  }
+
+  .has-submenu:hover > .submenu {
+    display: block;
+  }
+
+  .nav-desk-link.arr-down {
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)б
+                stroke 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  }
+
+  .has-submenu:hover .arr-down {
+    transform: rotate(180deg);
+    stroke: #605e5c;
+  }
+  .submenu-link {
+    padding: 5px 0;
+    display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .submenu-link:hover {
+    color: #605e5c;
+  }
+  .profile-icons {  
+    display: flex; 
+    gap: 40px;
+  }
+  .icon-logo {
+    width: 264px;
+    height: 66px;
+  }
+  
 }
