--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,7 +12,8 @@
 
 /* Sections style */
 @import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+@import url('./hero.css');
+@import url('./best-sellers.css');
+@import url('./advantages.css');
+@import url('./size-comparison.css');
+
